--- a/miss-book-starter/index.html
+++ b/miss-book-starter/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <script src="lib/react.js"></script>
+    <script src="lib/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/history/5.3.0/history.development.min.js"></script>
+
     <script src="lib/react.development.js"></script>
     <script src="lib/react-dom.development.js"></script>
-    
+
+    <script src="lib/history.js"></script>
+    <script src="lib/react-router.js"></script>
+    <script src="lib/react-router-dom.js"></script>
+
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="assets/style/main.css">
     <title>React Starter</title>
@@ -22,6 +30,8 @@
     <script src="lib/loadBabelModules.js"></script>
     <script src="lib/babel.js"></script>
     <script src="lib/babel-preset.js"></script>
+
+    <script src="lib/axios.js"></script>
 </body>
 
 </html>
